Add edge case handler for stack reduction

Inputs with the form 8-3*2+1 reduced incorrectly due to
the "+" operation dropping the "-" for the first operand.
Added code to detect this special case and give the expected result.

BUG: 487614


(cherry picked from commit 91205962fa89d0a31abb21a2aaee9aff17d36b91)