kcalc_token.h
@@ -140,6 +140,10 @@ public:
     void invertSignFirstArg();
     void invertSignSecondArg();
 
+    bool isFirstArgInverted() const;
+    bool isSecondArgInverted() const;
+
+
     void updateToken(const KNumber &kNumber);
     void updateToken(TokenCode tokenCode);
 
